--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -2,17 +2,17 @@ name: whatsapp_share_example
 description: Demonstrates how to use the whatsapp_share plugin.
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
-  screenshot: ^0.1.1
-  documents_picker: ^1.0.0
-  path_provider: ^1.3.0
-  image_picker: ^0.6.2+3
+  cupertino_icons: ^1.0.3
+  screenshot: ^1.0.0-nullsafety.1
+#  documents_picker: ^1.0.0
+  path_provider: ^2.0.2
+  image_picker: ^0.7.5+3
 
 
   whatsapp_share:
